# sdf-lang

./: .gitignore  Cargo.toml  README.md  build.rs  more todo.txt  test.bat  todo.md
src/: environment.rs  lexer.rs  lib.rs  main.rs
src/lex/: mod.rs  tokenize.rs
src/lexer/: analyze.rs  grammar.md  mod.rs  tokenize.rs
src/parse/: ast.rs  context.rs  grammar.md  mod.rs  parser.lalrpop
src/parse/glsl/: functions.rs  mat.rs  mod.rs  vec.rs
src/parse/glsl_types/: vec.rs
src/runtime/: application.rs  mod.rs  opengl.rs  timing.rs
src/runtime/shaders/: full_screen.vert
src/snippets/: 3d.frag
src/translate/: mod.rs  template.rs
tests/: arrays.sdf  fragment.sdf  medium.sdf  sd_primitives.sdf  simple.sdf  test.sdf  vertex.sdf
