[package]
name = "sdf-lang"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["runtime"]
runtime = ["sdl2", "gl"] # The runtime uses sdl2 and gl

[build-dependencies]
lalrpop = { version = "0.18.1", features = ["lexer"] }

[dependencies]
lalrpop-util = "0.18.1"
regex = "1.3.6"

sdl2 = { version = "0.33", optional = true }
gl = { version = "0.14.0", optional = true }